2004-08-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/display/curve.cpp, src/display/curve.h:
	  Greater conformance with CodingStyle.

2004-07-31  Ted Gould  <ted@gould.cx>

	* src/extension/extension.cpp,
	src/extension/implementation/implementation.cpp,
	src/extension/implementation/implementation.h,
	src/extension/implementation/script.cpp,
	src/extension/implementation/script.h, src/extension/internal/eps-out.cpp,
	src/extension/internal/eps-out.h:

	Okay, changed the prefs_ prototypes to include which extension they are
	working with. This should clean up some warnings before they become
	problems later.

2004-07-31  Ted Gould  <ted@gould.cx>

	* src/print.cpp, src/extension/extension.cpp, src/extension/extension.h,
	  src/extension/internal/eps-out.cpp, src/extension/internal/ps.cpp:

	  Changed the get and set param prototypes so that they aren't overloaded
	  anymore - this was flaky.  Also added a document to the prototype so
	  that document specific parameters can be supported in the future.

2004-07-28  David Turner

	* sp-gradient.cpp, widgets/gradient-vector.cpp: fixed gradient handling to
	properly render gradients with sharp color boundaries

2004-07-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/inkview.cpp: Make the window title be the name of the
	  instead of the current file instead of the first file.

	* src/round-test.cpp: New unit-test file.

	* src/desktop.h, src/sp-desktop-widget.h:
	  Move SPDesktopWidget stuff from desktop.h to new file
	  sp-desktop-widget.h.

	* debian/*: Copy lots of changes from wolfi's official Debian package
	  of inkscape.
	  Also use separate builddir, which simplifies the `clean' target.

2004-07-24  MenTaLguY  <mental@rydia.net>

	* configure.in, src/Makefile.am, src/main.cpp, src/gc-core.h:
	  added libgc dependency

	* src/Makefile.am, traits/function.h:
	  added trait class for functions and C++ "functors"

	* src/Makefile.am, util/flip.h: